--- a/main-app/package.json
+++ b/main-app/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^6.6.4",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.27.0",
     "qiankun": "^2.10.16",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
