--- a/vue-app/package.json
+++ b/vue-app/package.json
@@ -8,6 +8,8 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "element-plus": "^2.10.7",
+    "pinia": "^3.0.3",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
