--- a/vue-app/package.json
+++ b/vue-app/package.json
@@ -16,6 +16,8 @@
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
-    "@vue/cli-service": "~5.0.0"
+    "@vue/cli-service": "~5.0.0",
+    "sass": "^1.90.0",
+    "sass-loader": "^16.0.5"
   }
 }
